# ci-bench-L1

./: README.md  pyproject.toml
benchmarks/: code_similarity.json  eval_harness.py  ground_truth.json  metrics.py
src/pyvalidate/: __init__.py  base.py
src/pyvalidate/schema/: errors.py  field.py  schema.py
src/pyvalidate/transformers/: converters.py  normalizers.py
src/pyvalidate/utils/: cache.py  helpers.py
src/pyvalidate/validators/: __init__.py  collection_validators.py  composite_validators.py  date_validators.py  numeric_validators.py  string_validators.py
tests/: test_cache_and_helpers.py  test_composite_validators.py  test_date_validators.py  test_numeric_validators.py  test_schema.py  test_string_validators.py  test_transformers.py
